  . Fixed iterator edge cases
  . Added methods getNamespaces(), getDocNamespaces()
- Fixed possible header injection by limiting each header to a single line.
  (Ilia)
- Fixed possible XSS inside error reporting functionality. (Ilia)
- Fixed many bugs in OCI8. (Tony)
- Fixed crash and leak in mysqli when using 4.1.x client libraries and
  connecting to 5.x server. (Andrey)
- Fixed bug #35694 (Improved error message for invalid fetch mode). (Ilia)
- Fixed bug #35692 (iconv_mime_decode() segmentation fault; with libiconv 
  only). (Tony)
- Fixed bug #35690 (pack() tries to allocate huge memory block when packing 
  float values to strings). (Tony)
- Fixed bug #35655 (whitespace following end of heredoc is lost). (Ilia)
- Fixed bug #35630 (strtotime() crashes on certain relative identifiers).
  (Ilia)
- Fixed bug #35629 (crash in http:// wrapper on multiple redirects). (Ilia)
- Fixed bug #35624 (strtotime() does not handle 3 character weekdays). (Ilia)
- Fixed bug #35612 (iis6 Access Violation crash). (Dmitry, alacn.uhahaa)
- Fixed bug #35594 (Multiple calls to getopt() may result in a crash).
  (rabbitt at gmail dot com, Ilia)
- Fixed bug #35571 (Fixed crash in Apache 2 SAPI when more then one php 
  script is loaded via SSI include). (Ilia)
- Fixed bug #35570 (segfault when re-using soap client object). (Dmitry)
- Fixed bug #35558 (mktime() interpreting 3 digit years incorrectly). (Ilia)
- Fixed bug #35543 (php crash when calling non existing method of a class
  that extends PDO). (Tony)
- Fixed bug #35539 (typo in error message for ErrorException). (Tony)
- FIxed bug #35536 (mysql_field_type() doesn't handle NEWDECIMAL). (Tony)
- Fixed bug #35509 (string constant as array key has different behavior inside
  object). (Dmitry)
- Fixed bug #35508 (PDO fails when unknown fetch mode specified). (Tony)
- Fixed bug #35499 (strtotime() does not handle whitespace around the date 
  string). (Ilia)
- Fixed bug #35496 (Crash in mcrypt_generic()/mdecrypt_generic() without 